tests/fixtures/invalid/pow_int_none_dict.py
# Cannot call pow() with Int, None, Dict[str, int]
x = pow(1, None, {"a": 1})
